[package]
name = "big_fraction"
version = "0.1.0"
authors = ["Neil <neilhube12@gmail.com"]
edition = "2018"
description="Big Fraction"
categories=["algorithms","data-structures"]
license="MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.3"
num-traits = "0.2.14"
num-integer = "0.1.44"